syntax = "proto3";

package accountspb;

service AccountsService {
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
}
